[gd_scene load_steps=7 format=3 uid="uid://c18n1w0ax0apu"]

[ext_resource type="Script" path="res://scripts/main_scene.gd" id="1_o0syh"]
[ext_resource type="Texture2D" uid="uid://4g1t7imkht3i" path="res://tiles/tiletest.png" id="2_4e156"]
[ext_resource type="PackedScene" uid="uid://6kb8km6kbit5" path="res://scenes/XPGem.tscn" id="3_ay8e7"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_p41n1"]
texture = ExtResource("2_4e156")
0:0/0 = 0
0:2/next_alternative_id = 4
0:2/animation_columns = 4
0:2/animation_frame_0/duration = 1.0
0:2/animation_frame_1/duration = 1.0
0:2/animation_frame_2/duration = 1.0
0:2/animation_frame_3/duration = 1.0
0:2/0 = 0
0:2/1 = 1
0:2/1/flip_v = true
0:2/2 = 2
0:2/2/transpose = true
0:2/3 = 3
0:2/3/flip_h = true
0:2/3/flip_v = true
0:2/3/transpose = true
0:3/animation_columns = 4
0:3/animation_frame_0/duration = 1.0
0:3/animation_frame_1/duration = 1.0
0:3/animation_frame_2/duration = 1.0
0:3/animation_frame_3/duration = 1.0
0:3/0 = 0
1:0/next_alternative_id = 4
1:0/0 = 0
1:0/1 = 1
1:0/1/flip_h = true
1:0/1/flip_v = true
2:0/next_alternative_id = 3
2:0/0 = 0
2:0/1 = 1
2:0/1/flip_h = true
2:0/1/flip_v = true
3:0/next_alternative_id = 4
3:0/0 = 0
3:0/1 = 1
3:0/1/flip_v = true
3:0/1/transpose = true
3:0/2 = 2
3:0/2/flip_h = true
3:0/2/transpose = true
3:0/3 = 3
3:0/3/flip_h = true
3:0/3/flip_v = true
3:0/3/transpose = true
0:1/next_alternative_id = 4
0:1/animation_columns = 4
0:1/animation_frame_0/duration = 1.0
0:1/animation_frame_1/duration = 1.0
0:1/animation_frame_2/duration = 1.0
0:1/animation_frame_3/duration = 1.0
0:1/0 = 0
0:1/1 = 1
0:1/1/flip_v = true
0:1/2 = 2
0:1/2/flip_h = true
0:1/2/flip_v = true
0:1/2/transpose = true
0:1/3 = 3
0:1/3/flip_h = true

[sub_resource type="TileSet" id="TileSet_4lr71"]
sources/1 = SubResource("TileSetAtlasSource_p41n1")

[sub_resource type="Curve2D" id="Curve2D_1s1nb"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -257, -192, 0, 0, 0, 0, 261, -192, 0, 0, 0, 0, 261, 195, 0, 0, 0, 0, -263, 195, 0, 0, 0, 0, -257, -192)
}
point_count = 5

[node name="MainScene" type="Node"]
script = ExtResource("1_o0syh")

[node name="mobSpawnTimer" type="Timer" parent="."]

[node name="TileMap" type="TileMap" parent="."]
texture_filter = 1
tile_set = SubResource("TileSet_4lr71")
format = 2
layer_0/tile_data = PackedInt32Array(-327690, 1, 0, -262154, 1, 0, -196618, 1, 0, -131082, 1, 0, -65546, 1, 0, -10, 1, 0, 65526, 1, 0, 131062, 1, 0, 196598, 1, 0, 262134, 1, 0, 327670, 1, 0, 393206, 1, 0, -327689, 1, 0, -262153, 1, 0, -196617, 1, 0, -131081, 1, 0, -65545, 1, 0, -9, 1, 0, 65527, 1, 0, 131063, 1, 0, 196599, 1, 0, 262135, 1, 0, 327671, 1, 0, 393207, 1, 0, -327688, 1, 0, -262152, 1, 0, -196616, 1, 0, -131080, 1, 0, -65544, 1, 0, -8, 1, 0, 65528, 1, 0, 131064, 1, 0, 196600, 1, 0, 262136, 1, 0, 327672, 1, 0, 393208, 1, 0, -327687, 1, 0, -262151, 1, 0, -196615, 1, 0, -131079, 1, 0, -65543, 1, 0, -7, 1, 0, 65529, 1, 0, 131065, 1, 0, 196601, 1, 0, 262137, 1, 0, 327673, 1, 0, 393209, 1, 0, -327686, 1, 0, -262150, 1, 0, -196614, 1, 0, -131078, 1, 0, -65542, 1, 0, -6, 1, 0, 65530, 1, 0, 131066, 1, 0, 196602, 1, 0, 262138, 1, 0, 327674, 1, 0, 393210, 1, 0, -327685, 1, 0, -262149, 1, 0, -196613, 1, 0, -131077, 1, 0, -65541, 1, 0, -5, 1, 0, 65531, 1, 0, 131067, 1, 0, 196603, 1, 0, 262139, 1, 0, 327675, 1, 0, 393211, 1, 0, -327684, 1, 0, -262148, 1, 0, -196612, 1, 0, -131076, 1, 0, -65540, 1, 0, -4, 1, 0, 65532, 1, 0, 131068, 1, 0, 196604, 1, 0, 262140, 1, 0, 327676, 1, 0, 393212, 1, 0, -327683, 1, 0, -262147, 1, 0, -196611, 1, 0, -131075, 1, 0, -65539, 1, 0, -3, 1, 0, 65533, 1, 0, 131069, 1, 0, 196605, 1, 0, 262141, 1, 0, 327677, 1, 0, 393213, 1, 0, -327682, 1, 0, -262146, 1, 0, -196610, 1, 0, -131074, 1, 0, -65538, 1, 0, -2, 1, 0, 65534, 1, 0, 131070, 1, 0, 196606, 1, 0, 262142, 1, 0, 327678, 1, 0, 393214, 1, 0, -327681, 1, 0, -262145, 1, 0, -196609, 1, 0, -131073, 1, 0, -65537, 1, 0, -1, 1, 0, 65535, 1, 0, 131071, 1, 0, 196607, 1, 0, 262143, 1, 0, 327679, 1, 0, 393215, 1, 0, -393216, 1, 0, -327680, 1, 0, -262144, 1, 0, -196608, 1, 0, -131072, 1, 0, -65536, 1, 0, 0, 1, 0, 65536, 1, 0, 131072, 1, 0, 196608, 1, 0, 262144, 1, 0, 327680, 1, 0, -393215, 1, 0, -327679, 1, 0, -262143, 1, 0, -196607, 1, 0, -131071, 1, 0, -65535, 1, 0, 1, 1, 0, 65537, 1, 0, 131073, 1, 0, 196609, 1, 0, 262145, 1, 0, 327681, 1, 0, -393214, 1, 0, -327678, 1, 0, -262142, 1, 0, -196606, 1, 0, -131070, 1, 0, -65534, 1, 0, 2, 1, 0, 65538, 1, 0, 131074, 1, 0, 196610, 1, 0, 262146, 1, 0, 327682, 1, 0, -393213, 1, 0, -327677, 1, 0, -262141, 1, 0, -196605, 1, 0, -131069, 1, 0, -65533, 1, 0, 3, 1, 0, 65539, 1, 0, 131075, 1, 0, 196611, 1, 0, 262147, 1, 0, 327683, 1, 0, -393212, 1, 0, -327676, 1, 0, -262140, 1, 0, -196604, 1, 0, -131068, 1, 0, -65532, 1, 0, 4, 1, 0, 65540, 1, 0, 131076, 1, 0, 196612, 1, 0, 262148, 1, 0, 327684, 1, 0, -393211, 1, 0, -327675, 1, 0, -262139, 1, 0, -196603, 1, 0, -131067, 1, 0, -65531, 1, 0, 5, 1, 0, 65541, 1, 0, 131077, 1, 0, 196613, 1, 0, 262149, 1, 0, 327685, 1, 0, -393210, 1, 0, -327674, 1, 0, -262138, 1, 0, -196602, 1, 0, -131066, 1, 0, -65530, 1, 0, 6, 1, 0, 65542, 1, 0, 131078, 1, 0, 196614, 1, 0, 262150, 1, 0, 327686, 1, 0, -393209, 1, 0, -327673, 1, 0, -262137, 1, 0, -196601, 1, 0, -131065, 1, 0, -65529, 1, 0, 7, 1, 0, 65543, 1, 0, 131079, 1, 0, 196615, 1, 0, 262151, 1, 0, 327687, 1, 0, -393208, 1, 0, -327672, 1, 0, -262136, 1, 0, -196600, 1, 0, -131064, 1, 0, -65528, 1, 0, 8, 1, 0, 65544, 1, 0, 131080, 1, 0, 196616, 1, 0, 262152, 1, 0, 327688, 1, 0, -393207, 1, 0, -327671, 1, 0, -262135, 1, 0, -196599, 1, 0, -131063, 1, 0, -65527, 1, 0, 9, 1, 0, 65545, 1, 0, 131081, 1, 0, 196617, 1, 0, 262153, 1, 0, 327689, 1, 0, -393206, 65537, 0, -327670, 65537, 0, -262134, 65537, 0, -196598, 65537, 0, -131062, 65537, 0, -65526, 65537, 0, 10, 65537, 0, 65546, 65537, 0, 131082, 65537, 0, 196618, 65537, 0, 262154, 65537, 0, 327690, 65537, 0, 393226, 196609, 0, 458742, 131073, 0, 458743, 131073, 0, 458744, 131073, 0, 458745, 131073, 0, 458746, 131073, 0, 458747, 131073, 0, 458748, 131073, 0, 458749, 131073, 0, 458750, 131073, 0, 458751, 131073, 0, 393216, 131073, 0, 393217, 131073, 0, 393218, 131073, 0, 393219, 131073, 0, 393220, 131073, 0, 393221, 131073, 0, 393222, 131073, 0, 393223, 131073, 0, 393224, 131073, 0, 393225, 131073, 0, 524278, 1, 2, 524279, 1, 2, 524280, 1, 2, 524281, 1, 2, 524282, 1, 2, 524283, 1, 2, 524284, 1, 2, 524285, 1, 2, 524286, 1, 2, 524287, 1, 2, 458752, 1, 2, 458753, 1, 2, 458754, 1, 2, 458755, 1, 2, 458756, 1, 2, 458757, 1, 2, 458758, 1, 2, 458759, 1, 2, 458760, 1, 2, 458761, 1, 2, 458762, 1, 2, -458762, 1, 65538, -458761, 1, 65538, -458760, 1, 65538, -458759, 1, 65538, -458758, 1, 65538, -458757, 1, 65538, -458756, 1, 65538, -458755, 1, 65538, -458754, 1, 65538, -458753, 1, 65538, -524288, 1, 65538, -524287, 1, 65538, -524286, 1, 65538, -524285, 1, 65538, -524284, 1, 65538, -524283, 1, 65538, -524282, 1, 65538, -524281, 1, 65538, -524280, 1, 65538, -524279, 1, 65538, -393226, 131073, 65536, -393225, 131073, 65536, -393224, 131073, 65536, -393223, 131073, 65536, -393222, 131073, 65536, -393221, 131073, 65536, -393220, 131073, 65536, -393219, 131073, 65536, -393218, 131073, 65536, -393217, 131073, 65536, -458752, 131073, 65536, -458751, 131073, 65536, -458750, 131073, 65536, -458749, 131073, 65536, -458748, 131073, 65536, -458747, 131073, 65536, -458746, 131073, 65536, -458745, 131073, 65536, -458744, 131073, 65536, -458743, 131073, 65536, 458741, 196609, 131072, -458742, 196609, 65536, -393227, 196609, 196608, -327691, 65537, 65536, -262155, 65537, 65536, -196619, 65537, 65536, -131083, 65537, 65536, -65547, 65537, 65536, -11, 65537, 65536, 65525, 65537, 65536, 131061, 65537, 65536, 196597, 65537, 65536, 262133, 65537, 65536, 327669, 65537, 65536, 393205, 65537, 65536, -393228, 1, 196610, -327692, 1, 196610, -262156, 1, 196610, -196620, 1, 196610, -131084, 1, 196610, -65548, 1, 196610, -12, 1, 196610, 65524, 1, 196610, 131060, 1, 196610, 196596, 1, 196610, 262132, 1, 196610, 327668, 1, 196610, 393204, 1, 196610, 458740, 1, 196610, -458741, 1, 131074, -393205, 1, 131074, -327669, 1, 131074, -262133, 1, 131074, -196597, 1, 131074, -131061, 1, 131074, -65525, 1, 131074, 11, 1, 131074, 65547, 1, 131074, 131083, 1, 131074, 196619, 1, 131074, 262155, 1, 131074, 327691, 1, 131074, 393227, 1, 131074, -524278, 1, 65538, -458763, 1, 65538, 524277, 1, 2, 458763, 1, 1, -524277, 1, 65537, -458764, 1, 131073, 524276, 1, 196609, -720884, 1, 3, -655348, 1, 3, -589812, 1, 3, -524276, 1, 3, -458740, 1, 3, -393204, 1, 3, -327668, 1, 3, -262132, 1, 3, -196596, 1, 3, -131060, 1, 3, -65524, 1, 3, 12, 1, 3, 65548, 1, 3, 131084, 1, 3, 196620, 1, 3, 262156, 1, 3, 327692, 1, 3, 393228, 1, 3, 458764, 1, 3, 524300, 1, 3, 589836, 1, 3, 655372, 1, 3, -720883, 1, 3, -655347, 1, 3, -589811, 1, 3, -524275, 1, 3, -458739, 1, 3, -393203, 1, 3, -327667, 1, 3, -262131, 1, 3, -196595, 1, 3, -131059, 1, 3, -65523, 1, 3, 13, 1, 3, 65549, 1, 3, 131085, 1, 3, 196621, 1, 3, 262157, 1, 3, 327693, 1, 3, 393229, 1, 3, 458765, 1, 3, 524301, 1, 3, 589837, 1, 3, 655373, 1, 3, -720882, 1, 3, -655346, 1, 3, -589810, 1, 3, -524274, 1, 3, -458738, 1, 3, -393202, 1, 3, -327666, 1, 3, -262130, 1, 3, -196594, 1, 3, -131058, 1, 3, -65522, 1, 3, 14, 1, 3, 65550, 1, 3, 131086, 1, 3, 196622, 1, 3, 262158, 1, 3, 327694, 1, 3, 393230, 1, 3, 458766, 1, 3, 524302, 1, 3, 589838, 1, 3, 655374, 1, 3, 589809, 1, 3, 655345, 1, 3, 720881, 1, 3, 589810, 1, 3, 655346, 1, 3, 720882, 1, 3, 589811, 1, 3, 655347, 1, 3, 720883, 1, 3, 589812, 1, 3, 655348, 1, 3, 720884, 1, 3, 589813, 1, 3, 655349, 1, 3, 720885, 1, 3, 589814, 1, 3, 655350, 1, 3, 720886, 1, 3, 589815, 1, 3, 655351, 1, 3, 720887, 1, 3, 589816, 1, 3, 655352, 1, 3, 720888, 1, 3, 589817, 1, 3, 655353, 1, 3, 720889, 1, 3, 589818, 1, 3, 655354, 1, 3, 720890, 1, 3, 589819, 1, 3, 655355, 1, 3, 720891, 1, 3, 589820, 1, 3, 655356, 1, 3, 720892, 1, 3, 589821, 1, 3, 655357, 1, 3, 720893, 1, 3, 589822, 1, 3, 655358, 1, 3, 720894, 1, 3, 589823, 1, 3, 655359, 1, 3, 720895, 1, 3, 524288, 1, 3, 589824, 1, 3, 655360, 1, 3, 524289, 1, 3, 589825, 1, 3, 655361, 1, 3, 524290, 1, 3, 589826, 1, 3, 655362, 1, 3, 524291, 1, 3, 589827, 1, 3, 655363, 1, 3, 524292, 1, 3, 589828, 1, 3, 655364, 1, 3, 524293, 1, 3, 589829, 1, 3, 655365, 1, 3, 524294, 1, 3, 589830, 1, 3, 655366, 1, 3, 524295, 1, 3, 589831, 1, 3, 655367, 1, 3, 524296, 1, 3, 589832, 1, 3, 655368, 1, 3, 524297, 1, 3, 589833, 1, 3, 655369, 1, 3, 524298, 1, 3, 589834, 1, 3, 655370, 1, 3, 524299, 1, 3, 589835, 1, 3, 655371, 1, 3, -720911, 1, 3, -655375, 1, 3, -589839, 1, 3, -524303, 1, 3, -458767, 1, 3, -393231, 1, 3, -327695, 1, 3, -262159, 1, 3, -196623, 1, 3, -131087, 1, 3, -65551, 1, 3, -15, 1, 3, 65521, 1, 3, 131057, 1, 3, 196593, 1, 3, 262129, 1, 3, 327665, 1, 3, 393201, 1, 3, 458737, 1, 3, 524273, 1, 3, -720910, 1, 3, -655374, 1, 3, -589838, 1, 3, -524302, 1, 3, -458766, 1, 3, -393230, 1, 3, -327694, 1, 3, -262158, 1, 3, -196622, 1, 3, -131086, 1, 3, -65550, 1, 3, -14, 1, 3, 65522, 1, 3, 131058, 1, 3, 196594, 1, 3, 262130, 1, 3, 327666, 1, 3, 393202, 1, 3, 458738, 1, 3, 524274, 1, 3, -720909, 1, 3, -655373, 1, 3, -589837, 1, 3, -524301, 1, 3, -458765, 1, 3, -393229, 1, 3, -327693, 1, 3, -262157, 1, 3, -196621, 1, 3, -131085, 1, 3, -65549, 1, 3, -13, 1, 3, 65523, 1, 3, 131059, 1, 3, 196595, 1, 3, 262131, 1, 3, 327667, 1, 3, 393203, 1, 3, 458739, 1, 3, 524275, 1, 3, -720908, 1, 3, -655372, 1, 3, -589836, 1, 3, -524300, 1, 3, -720907, 1, 3, -655371, 1, 3, -589835, 1, 3, -524299, 1, 3, -720906, 1, 3, -655370, 1, 3, -589834, 1, 3, -524298, 1, 3, -720905, 1, 3, -655369, 1, 3, -589833, 1, 3, -524297, 1, 3, -720904, 1, 3, -655368, 1, 3, -589832, 1, 3, -524296, 1, 3, -720903, 1, 3, -655367, 1, 3, -589831, 1, 3, -524295, 1, 3, -720902, 1, 3, -655366, 1, 3, -589830, 1, 3, -524294, 1, 3, -720901, 1, 3, -655365, 1, 3, -589829, 1, 3, -524293, 1, 3, -720900, 1, 3, -655364, 1, 3, -589828, 1, 3, -524292, 1, 3, -720899, 1, 3, -655363, 1, 3, -589827, 1, 3, -524291, 1, 3, -720898, 1, 3, -655362, 1, 3, -589826, 1, 3, -524290, 1, 3, -720897, 1, 3, -655361, 1, 3, -589825, 1, 3, -524289, 1, 3, -786432, 1, 3, -720896, 1, 3, -655360, 1, 3, -589824, 1, 3, -786431, 1, 3, -720895, 1, 3, -655359, 1, 3, -589823, 1, 3, -786430, 1, 3, -720894, 1, 3, -655358, 1, 3, -589822, 1, 3, -786429, 1, 3, -720893, 1, 3, -655357, 1, 3, -589821, 1, 3, -786428, 1, 3, -720892, 1, 3, -655356, 1, 3, -589820, 1, 3, -786427, 1, 3, -720891, 1, 3, -655355, 1, 3, -589819, 1, 3, -786426, 1, 3, -720890, 1, 3, -655354, 1, 3, -589818, 1, 3, -786425, 1, 3, -720889, 1, 3, -655353, 1, 3, -589817, 1, 3, -786424, 1, 3, -720888, 1, 3, -655352, 1, 3, -589816, 1, 3, -786423, 1, 3, -720887, 1, 3, -655351, 1, 3, -589815, 1, 3, -786422, 1, 3, -720886, 1, 3, -655350, 1, 3, -589814, 1, 3, -786421, 1, 3, -720885, 1, 3, -655349, 1, 3, -589813, 1, 3, -786420, 1, 3, -786419, 1, 3, -786418, 1, 3, -720912, 1, 3, -655376, 1, 3, -589840, 1, 3, -524304, 1, 3, -458768, 1, 3, -393232, 1, 3, -327696, 1, 3, -262160, 1, 3, -196624, 1, 3, -131088, 1, 3, -65552, 1, 3, -16, 1, 3, 65520, 1, 3, 131056, 1, 3, 196592, 1, 3, 262128, 1, 3, 327664, 1, 3, 393200, 1, 3, 458736, 1, 3, 524272, 1, 3, 589808, 1, 3, 655344, 1, 3, 720880, 1, 3, 786416, 1, 3, 786417, 1, 3, 786418, 1, 3, 786419, 1, 3, 786420, 1, 3, 786421, 1, 3, 786422, 1, 3, 786423, 1, 3, 786424, 1, 3, 786425, 1, 3, 786426, 1, 3, 786427, 1, 3, 786428, 1, 3, 786429, 1, 3, 786430, 1, 3, 786431, 1, 3, 720896, 1, 3, 720897, 1, 3, 720898, 1, 3, 720899, 1, 3, 720900, 1, 3, 720901, 1, 3, 720902, 1, 3, 720903, 1, 3, 720904, 1, 3, 720905, 1, 3, 720906, 1, 3, 720907, 1, 3, 720908, 1, 3, 720909, 1, 3, 720910, 1, 3, 655375, 1, 3, 720911, 1, 3, -786417, 1, 3, -720881, 1, 3, -655345, 1, 3, -589809, 1, 3, -524273, 1, 3, -458737, 1, 3, -393201, 1, 3, -327665, 1, 3, -262129, 1, 3, -196593, 1, 3, -131057, 1, 3, -65521, 1, 3, 15, 1, 3, 65551, 1, 3, 131087, 1, 3, 196623, 1, 3, 262159, 1, 3, 327695, 1, 3, 393231, 1, 3, 458767, 1, 3, 524303, 1, 3, 589839, 1, 3)

[node name="mobSpawnPath" type="Path2D" parent="."]
curve = SubResource("Curve2D_1s1nb")

[node name="mobSpawnFollowPath" type="PathFollow2D" parent="mobSpawnPath"]
position = Vector2(-257, -192)

[node name="XpGem" parent="." instance=ExtResource("3_ay8e7")]
position = Vector2(-37, -11)

[node name="XpGem2" parent="." instance=ExtResource("3_ay8e7")]
position = Vector2(-29, 6)

[node name="XpGem3" parent="." instance=ExtResource("3_ay8e7")]
position = Vector2(-16, -7)

[node name="XpGem4" parent="." instance=ExtResource("3_ay8e7")]
position = Vector2(-25, -9)

[connection signal="timeout" from="mobSpawnTimer" to="." method="_on_mob_spawn_timer_timeout"]
